--- a/pages/intro.html
+++ b/pages/intro.html
@@ -14,7 +14,7 @@
 
     <dl class="info">
         <dt>Naam</dt>
-        <dd>[STUDENT_NAAM]</dd>
+        <dd>ss[STUDENT_NAAM]</dd>
         <dt>Studentnummer</dt>
         <dd>[STUDENT_NR]</dd>
         <dt>Klasgroep</dt>
