--- a/pages/intro.html
+++ b/pages/intro.html
@@ -13,15 +13,15 @@
     <h2>[PROJECT_NAME]</h2>
 
     <dl class="info">
-        <dt>Naam</dt>
-        <dd>ss[STUDENT_NAAM]</dd>
-        <dt>Studentnummer</dt>
-        <dd>[STUDENT_NR]</dd>
-        <dt>Klasgroep</dt>
-        <dd>[KLASGROEP]</dd>
+        <dt>El Ghachtoun Mustafa</dt>
+        <dd>[El Ghachtoun Mustafa]</dd>
+        <dt>99209</dt>
+        <dd>[99209]</dd>
+        <dt>ab</dt>
+        <dd>[ab]</dd>
     </dl>
     <p>
-        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
+        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[99209]">Mijn opdracht</a>
     </p>
     
     <h1>Introductie</h1>
