--- a/pages/intro.html
+++ b/pages/intro.html
@@ -13,15 +13,15 @@
     <h2>[PROJECT_NAME]</h2>
 
     <dl class="info">
-        <dt>El Ghachtoun Mustafa</dt>
-        <dd>[El Ghachtoun Mustafa]</dd>
-        <dt>99209</dt>
-        <dd>[99209]</dd>
-        <dt>ab</dt>
-        <dd>[ab]</dd>
+        <dt>Student</dt>
+        <dd>El Ghachtoun Mustafa</dd>
+        <dt>Studentnr.</dt>
+        <dd>99209</dd>
+        <dt>Klasgroep</dt>
+        <dd>ab</dd>
     </dl>
     <p>
-        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[99209]">Mijn opdracht</a>
+        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=99209">Mijn opdracht</a>
     </p>
     
     <h1>Introductie</h1>
