--- a/pages/intro.html
+++ b/pages/intro.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>New Media Design I</h1>
-    <h2>[PROJECT_NAME]</h2>
+    <h2>Sky festival</h2>
 
     <dl class="info">
         <dt>Student</dt>
@@ -25,6 +25,11 @@
     </p>
     
     <h1>Introductie</h1>
-    <p>[About my project]</p>
+    <p>Sky festival.
+Ik organiseer een buitengewone festival die nog nooit is georganiseerd namelijk Sky festival.Als je de twee woorden apart bespreekt zou je begrijpen waarom de festival, Sky festival noemt. Sky staat voor in de lucht dus vrijheid en festival staat voor feest en amusement. De bedoeling van deze festival is om mensen bij elkaar te brengen van over de hele wereld. Men maakt gebruik van een grote podium die door een 6 tal propellers en 10 helium ballonen die lucht in doet stijgen. Er zouden 50.000 mensen mee de lucht in kunnen. Er zijn in totaal 4 podiums over de vier continenten verspreid. De bedoeling is dat de vier podiums elkaar samen ontmoeten op een dichtstbijzijnde eiland ( santa cruz ) daar worden de vier podiums aan elkaar gekoppeld waardoor iedereen elkaar kan ontmoeten en samen feesten. De bedoeling van deze festival is dat de vrede terug komt in de wereld en dat iedereen verdraagzaam is met elkaar.
+Mochten er geïnteresseerde zijn dan kunnen ze op onze website voor alle info die ze nodig hebben. Er zal ook info staan van hoe het allemaal zal georganiseerd worden en welke dj’s er aanwezig zullen zijn. Onze website is  www.Skyfestival.com
+Op deze website zullen de mensen ook toegang kunnen krijgen om hun tickets te kunnen bestellen/kopen maar ze moeten zich eerst aanmelden door een account aan te maken.
+De bezoekers kunnen ook een kijkje nemen op de website hoe het podium in elkaar is gemonteerd  en hoe veilig het is om in de lucht te vliegen door een demonstratie die we zullen geven.
+</p>
 </body>
 </html>
