--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -10,6 +10,39 @@
 </head>
 <body>
     <h1>Concurrentie analyse</h1>
-    
+    <h2>Rock Werchter</h2>
+    <a href="https://www.rockwerchter.be/nl/">Website</a>
+    <h3>Positief</h3>
+    <ul>
+        <li>Er is genoeg info te vinden.</li>
+        <li>Je kan je gemakkelijk navigeren.</li>
+        <li>Je heb mogelijkheid om tickets te bestellen/kopen</li>
+    <h3>nagatieve</h3>
+        <li>Ik vind dat hun website te druk over komt door te veel foto’s enz..</li>
+        <li>Ik vind ook dat er teveel kleur is gebruikt.</li>
+    </ul>
+    <h3>Graspop</h3>
+    <a href="https://www.graspop.be/nl/">Website</a>
+    <h3>Positief</h3>
+    <ul>
+        <li>Er is genoeg info te vinden.</li>
+        <li>Je kan je gemakkelijk navigeren.</li>
+    <h3>nagatieve</h3>
+        <li>Naar mijn mening zijner geen negatieven aspecten </li>
+        
+    </ul>
+
+    <h3>Tomorrowland</h3>
+    <a href="https://www.tomorrowland.com/en/festival/welcome">Website</a>
+    <h3>nagatieve</h3>
+    <ul>
+        <li>Er is genoeg info te vinden.</li>
+        <li>Je kan je gemakkelijk navigeren.</li>
+    <h3>nagatieve</h3>
+        <li>ik vind dat men teveel moet klikken om tot de juiste site wil komen vb. tickets verkoop </li>
+        <li>ik vind dat er te veel info op de site is.</li>
+
+    </ul>
+
 </body>
 </html>
