--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -12,9 +12,9 @@
     <h1>Scenario's</h1>
     <h2>Mijn Festival.org</h2>
 
-    <p>Mark, 33 jaar, is een beroepsmilitair en heeft hoogtevrees. Hij is op zoek naar een oplossing om van zijn vrees af te zijn. zijn hoogtevrees. Hij vernam via Mijn Festival.org dat er binnenkort een skyfestival zal georganiseerd worden. misschien zal dal hem helpen om van zijn vrees af te zijn </p>
-    <p>Ann, 25 jaar, is een studente en feest heel graag maar vind niet de juiste festival waar ze zich goed kan vermaken.ze vraagt zich af of er een festival ooit zal bestaan waar ze van omver zal geblazen worden.</p>
-    <p>Mike, 27 jaar, pas afgestudeerd als Burgelijkingenieur en wil het samen met zijn vrienden vieren. hij is op zoek naar een ideale festival maar vind geen juiste festival met uidagingen.</p>
+    <p>Mark, 33 jaar, is een beroepsmilitair en heeft hoogtevrees. Hij is op zoek naar een oplossing om van zijn vrees af te zijn. zijn hoogtevrees. Hij vernam via Mijn Festival.org dat er binnenkort een skyfestival zal georganiseerd worden dat in de lucht is. misschien zal dat hem helpen om van zijn vrees af te zijn denkt hij. </p>
+    <p>Ann, 25 jaar, is een studente en feest heel graag maar vind niet de juiste festival waar ze zich goed kan vermaken. Toen ze online begon te zoeken kwam ze Mijn festival.og tegen. Sinds dien ging ze regelmatig op het platform kijken als er festivals voor haar waren. </p>
+    <p>Mike, 27 jaar, is pas afgestudeerd als Burgelijkingenieur en dat wil het samen met zijn vrienden vieren. hij is op zoek naar een ideale festival maar vond geen juiste festival met uidagingen tot hij een kijkje ging nemen op Mijn festival.org daar kon hij tussen verschillende festivals kiezen. Dus nu als hij wil gaan feesten zoek hij gewoon via Mijn festival.org.                                                      .</p>
     <p>Annelies, 41 jaar, is een alleenstaande moeder die graag iets gaat drinken en feesten met de vrienden ze is heel sociaal. Ze maakt gebruik van Mijn Festival.org om in contact te komen met de mensen anders zou ze zich dood vervelen. </p>
 
 </body>
