--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -10,5 +10,28 @@
 </head>
 <body>
     <h1>Digital Styleguide</h1>
+
+    <h1>SKYFESTIVAL</h1>
+
+    <a class="button1" id="add-basket"> Bevestig</a>
+    <a class="button" id="add-basket"> Bevestigt</a>
+ 
+    <nav>
+     <ul>
+       <li><a href="">Nieuw</a></li>
+       <li><a href="">Tickets</a></li>
+       <li><a href="">Dj's</a></li>
+     </ul>
+   </nav>
+   
+ 
+   <h2>
+    
+       <li><a href="">Into</a></li>
+       <li><a href="">Line-up</a></li>
+       <li><a href="">Mainstage</a></li>
+       <li><a href="">Foto's</a></li>
+    
+   </h2>
 </body>
 </html>
