--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <h1>Digital Styleguide</h1>
+<figure><img src="images/skyfestival.jpg" alt="skyfestival"></figure>
 
-    <h1>SKYFESTIVAL</h1>
 
     <a class="button1" id="add-basket"> Bevestig</a>
     <a class="button" id="add-basket"> Bevestigt</a>
@@ -25,13 +25,16 @@
    </nav>
    
  
-   <h2>
+   <h4>
     
-       <li><a href="">Into</a></li>
+       <li><a href="">Info</a></li>
        <li><a href="">Line-up</a></li>
        <li><a href="">Mainstage</a></li>
        <li><a href="">Foto's</a></li>
     
-   </h2>
+   </h4>
+
+   
+
 </body>
 </html>
