--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -13,8 +13,9 @@
     <h1>Digital Styleguide</h1>
 <figure><img src="images/skyfestival.jpg" alt="skyfestival"></figure>
 
-<p>Titels: myriad Pro / bolt 16pt</p>
-<p>Tekst: myriad Pro 12pt</p>
+<p></p>
+<p id="Titels1">Titels: myriad Pro / bolt 16pt</p>
+<p id="Tekst1">Tekst: myriad Pro 12pt</p>
 
 
 
@@ -39,7 +40,7 @@
        <li><a href="">Foto's</a></li>
        
     <div></div>
-<div id="bordeaux"><blockquote>(129, 7, 7)</div></blockquote>
+<div id="bordeaux"><blockquote>rgb(129, 7, 7)</div></blockquote>
 <div id="rood"><blockquote>rgb(255, 0, 0)</div></blockquote>
 <div id="donkerrood"><blockquote>rgb(83, 3, 3)</div></blockquote>
 <div id="blauw"><blockquote>rgb(0, 0, 255)</div></blockquote>
