--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -11,10 +11,11 @@
 </head>
 <body>
     <h1>Digital Styleguide</h1>
+    
 <figure><img src="images/skyfestival.jpg" alt="skyfestival"></figure>
-<figure><img src="images/fb.png" alt="fb"></figure>
-<figure><img src="images/instagram.png" alt="instagram"></figure>
-<figure><img src="images/twiter.png" alt="twiter"></figure>
+<figure id="fb"><img src="images/fb.png" alt="fb"></figure>
+<figure id="instagram"><img src="images/instagram.png" alt="instagram"></figure>
+<figure id="twiter"><img src="images/twiter.png" alt="twiter"></figure>
 
 <p></p>
 <p id="Titels1">Titels: myriad Pro / bolt 16pt</p>
