--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -18,14 +18,17 @@
 <figure id="twiter"><img src="images/twiter.png" alt="twiter"></figure>
 
 <p></p>
+<p id="Logo1">Logo: myriad Pro 150pt</p>
 <p id="Titels1">Titels: myriad Pro / bolt 16pt</p>
 <p id="Tekst1">Tekst: myriad Pro 12pt</p>
+
 
 
 
     <a class="button1" id="add-basket"> Bevestig</a>
     <a class="button" id="add-basket"> Bevestigt</a>
     <a class="button2" id="add-basket">annuleren </a>
+    <a class="button3" id="add-basket">geannuleerd </a>
 
     <nav>
      <ul>
